# desktop_robot

aruco_localization/: CMakeLists.txt  main.cpp  main.cpp_cpy  main.cpp_cpy2
aruco_localization/include/: data_transport.h  data_type.h  observation.h
behavior_planner/: CMakeLists.txt  main.cpp  main.cpp_cpy  robot_motion.cpp
behavior_planner/include/: target_planner.h
behavior_planner2/: main.cpp  robot_motion.cpp
behavior_planner2/include/: data_type.h  goal_generate.h  robot_motion.h  task_planner.h
behavior_planner3/: .main.cpp.swp  main.cpp
behavior_planner3/include/: .task_planner.h.swp  data_type.h  task_planner.h
behavior_planner3/model/: behavior_planner.mlp
behavior_planner4/: CMakeLists.txt  main.cpp  main.cpp_cp
behavior_planner4/include/: fsmlist.hpp  goal_generate.h  robot_motion.h  task_planner.h
chassis_control/: CMakeLists.txt  main.cpp
chassis_control/include/: data_transport.h  ekf_fusion.h  imu_driver.h  motor.h  pid.h  time_stamp.h
emoj_management/: CMakeLists.txt  main.cpp  main.cpp_cpy
emoj_management/include/: data_transport.h  data_type.h  emoj_manage.h  lvgl_base.h  lvgl_base.h_cpy
emoj_management/lvgl/include/: lv_conf.h  lv_drv_conf.h  lvgl.h
emoj_management/lvgl/include/lv_drivers/display/: fbdev.h
emoj_management/lvgl/include/lv_drivers/indev/: evdev.h
emoj_management/lvgl/include/porting/: lv_port_fs.h
gs2_lidar_test/: CMakeLists.txt
gs2_lidar_test/include/: scan_container.h  utils.h
gs2_lidar_test/include/gs2_include/: ydlidar_driver.h
gs2_lidar_test/src/: .main.cpp.swp  main.cpp
imu_test/: CMakeLists.txt  main.cpp
imu_test/include/: data_type.h  imu_driver.h
interrupt_test/: CMakeLists.txt  main.cpp
laser_ranging/: main.cpp  ranging_sensor.h  test
lidar_driver/include/: data_transport.h  data_type.h  lidar_driver.h  scan_container.h  utils.h
lidar_driver/src/: main.cpp
localization/: CMakeLists.txt
localization/include/: data_transport.h  data_type.h  ekf_fusion.h  imu_driver.h  localize.h  motor.h  utils.h
localization_obstacle_avoid/: CMakeLists.txt
localization_obstacle_avoid/include/: apf_process.h  data_type.h  infrared_sensor.h  localize.h  ranging_sensor.h  utils.h
localization_path_planning/: main.cpp
localization_path_planning/include/: apf.h  data_transport.h  data_type.h  ekf_fusion.h  localize.h  path_tracking.h  pid.h  uart.h
localization_simulation/: CMakeLists.txt  main.cpp
localization_simulation/include/: data_transport.h  data_type.h
localization_with_lidar/: CMakeLists.txt  main.cpp
localization_with_lidar/include/: data_transport.h  data_type.h  ekf_fusion.h  localize.h  motor.h  observation.h  pid.h  utils.h
monocular_calibration/: CMakeLists.txt
monocular_calibration/src/: .main.cpp.swp  MonocularCalibration.cpp  main.cpp
motor_test/: main.cpp
motor_test/include/: event_manage.h  motor.h  pid.h  timer.h
observation_test/: .observation.h.swp  1  main.cpp  main.cpp_cpy  observation.h  test
sdk-GS2_V2-20220209/: sdk-GS2_V2.files  sdk-GS2_V2.includes
sdk-GS2_V2-20220209/include/: CYdLidar.h  ydlidar_protocol.h
sdk-GS2_V2-20220209/samples/: main.cpp
sdk-GS2_V2-20220209/src/: CYdLidar.cpp  ydlidar_driver.cpp
timer_test/: main.cpp
transport_test/: CMakeLists.txt  main.cpp
transport_test/include/: data_transport.h  ekf_fusion.h  event_manage.h
